--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 }
 
 .calculator-grid > button:hover {
-  background-color: rgba(255, 255, 255, .9);
+  background-color:lemonchiffon
 }
 
 .span-two {
